[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


